Fixed bio section on mobile devices

--- a/src/styles/sections/me.styl
+++ b/src/styles/sections/me.styl
@@ -40,6 +40,9 @@ section.me
     &:focus:after
       opacity 1
       transform translateY(0px)
+@media mobile
+  section.me
+    overflow-y auto
 @media mobile-tablet
   section.me
     padding 0 50px
@@ -47,7 +50,6 @@ section.me
       margin-bottom rem(30px)
 @media mobile-tablet-portrait
   section.me
-    overflow-y auto
     figure
       display none
     .content
